--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.5"
+    "bootstrap": "^5.3.3"
   },
   "devDependencies": {
+    "dotenv": "^16.4.1",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
-    "webpack": "^5.91.0",
     "favicons-webpack-plugin": "^6.0.1",
     "webpack-bundle-analyzer": "^4.10.2",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   }
