--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -2,3 +2,6 @@ Django == 5.0.6
 psycopg[binary,pool] == 3.1.19
 djangorestframework == 3.15.1
 tzdata == 2024.1
+#django-allauth == 0.63.3
+#django-rest-auth == 0.9.5
+argon2-cffi == 23.1.0
