--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,1 @@
-SOCKET_URL=https://your-domain
-LOGIN_URL=https://your-domain/api/login
-LOGOUT_URL=https://your-domain/api/logout
+API_URL=http://localhost:8069/backend
