chore: Update Dockerfile and docker-compose.yml configurations

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -16,7 +16,6 @@ RUN \
 	pip3 install -r requirements.txt --no-cache-dir --break-system-packages && \
 	apk --purge del .build-deps
 
-
 RUN mkdir /app
 WORKDIR /app
 #COPY ./app/requirements.txt /app
@@ -24,8 +23,12 @@ WORKDIR /app
 # For now we mount it
 # COPY . /app
 
-USER $USER
+EXPOSE 8000
 
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+COPY ./entrypoint.sh /tmp/entrypoint.sh
+RUN chmod +x /tmp/entrypoint.sh
+ENTRYPOINT [ "sh" , "/tmp/entrypoint.sh"]
+USER $USER
+# CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
 
 #CMD ["sleep", "infinity"]
