chore: Update Dockerfile and docker-compose.yml configurations, remove unused code

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:3.20.0
 
-ARG USER=appuser
+# ARG USER=appuser
 
-RUN adduser -D $USER
+# RUN adduser -D $USER
 
 COPY ./requirements.txt /
 
