fix nginx & ssl

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     env_file:
       - frontend/.env
     ports:
-      - 80:80
-      - 443:443
+      - 8085:80
     networks:
       - backnet
     depends_on:
@@ -26,7 +25,7 @@ services:
       - db
       - backnet
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-d", "${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"] # https://github.com/peter-evans/docker-compose-healthcheck/issues/16#issuecomment-1402807860
       interval: 10s
       timeout: 30s
       start_period: 1s
@@ -43,10 +42,9 @@ services:
       - .env
     networks:
       - db
+      - backnet
     depends_on:
       db:
-        condition: service_healthy
-      nginx:
         condition: service_healthy
     #command: ["sleep", "infinity"]
   nginx:
@@ -54,7 +52,8 @@ services:
       context: nginx
     restart: unless-stopped
     ports:
-      - 8080:80
+      - 80:80
+      - 443:443
     volumes:
       - ./nginx/data:/etc/nginx
       - ./nginx/logs:/var/log/nginx
@@ -62,12 +61,9 @@ services:
       - .env
     networks:
       - backnet
-    healthcheck:
-      test: ["CMD-SHELL", "nginx"]
-      interval: 10s
-      timeout: 30s
-      start_period: 1s
-      retries: 3
+    depends_on:
+      - backend
+    #command: ["sleep", "infinity"]
 volumes:
   db-data:
 
