--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     env_file:
       - frontend/.env
     ports:
-      - 8085:80
+      - 8080:8080
+    volumes:
+      - ./frontend:/app
     networks:
       - backnet
     depends_on:
       - backend
+    # command: ["sleep", "infinity"]
   db:
     build:
       context: db
@@ -63,7 +66,7 @@ services:
       - backnet
     depends_on:
       - backend
-    #command: ["sleep", "infinity"]
+    # command: ["sleep", "infinity"]
 volumes:
   db-data:
 
