nginx virtual volume fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - backnet
     depends_on:
       - backend
+      - frontend
     # command: ["sleep", "infinity"]
 volumes:
   db-data:
