oauth reçoit login du user

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,7 @@
 API_URL=http://localhost:8069/backend
+
+CLIENT_ID=xxx
+CLIENT_SECRET=xxx
+REDIRECT_URI=https://pong.ch/oauthcallback
+AUTHORIZATION_URL=https://api.intra.42.fr/oauth/authorize
+TOKEN_URL=/api/oauth/token
