jwt and new user progress

--- a/.env-example
+++ b/.env-example
@@ -17,3 +17,5 @@ CLIENT_SECRET=s-s4t2ud-316809cc5b8d522cf860c526d57c21cb205b5d945c9bd78e2f47cdea4
 REDIRECT_URI=http://localhost:8069/oauth/callback
 AUTHORIZATION_URL=https://api.intra.42.fr/oauth/authorize
 TOKEN_URL=/api/oauth/token
+
+JWT_SECRET=lolsecret
