ip instead of domain, wss, jwt

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,12 @@
+ARG BACKEND_IP
+
 FROM alpine:3.20.0
+
+ARG BACKEND_IP
+
+RUN echo ${BACKEND_IP} > bruh.txt
+
+RUN echo ${BACKEND_IP} > bruh2.txt
 
 RUN apk add openssl
 
@@ -6,7 +14,7 @@ RUN mkdir -p /etc/nginx/ssl
 RUN openssl req -x509 -nodes \
         -out /etc/nginx/ssl/nginx-certificate.crt \
         -keyout /etc/nginx/ssl/nginx-certificate.key \
-        -subj "/C=CH/ST=Vaud/L=Lausanne/O=42/OU=42/CN=*42pong.ch/UID=lsaba-qu"
+        -subj "/C=CH/ST=Vaud/L=Lausanne/O=42/OU=42/CN=${BACKEND_IP}/UID=lsaba-qu"
 
 RUN mkdir -p /etc/nginx/sites-enabled
 
@@ -14,7 +22,12 @@ COPY data/nginx.conf /etc/nginx/
 COPY data/proxy_params /etc/nginx/
 ADD data/snippets /etc/nginx/snippets/
 
-COPY data/sites-enabled/* /etc/nginx/sites-enabled/api
+COPY data/sites-enabled/* /etc/nginx/sites-enabled/
+
+#RUN sed BACKEND_IP for the env var
+RUN for file in /etc/nginx/sites-enabled/*; do \
+        sed -i "s/\%BACKEND_IP%/${BACKEND_IP}/g" "$file"; \
+    done
 
 RUN apk add nginx
 
