--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     env_file:
       - frontend/.env
+      - .env
     ports:
       - 8080:8080
     volumes:
@@ -49,11 +50,14 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+    #command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
     #command: ["sleep", "infinity"]
+    command: ["./manage.py", "runserver", "0.0.0.0:8069"]
   nginx:
     build:
       context: nginx
+      args:
+        BACKEND_IP: ${BACKEND_IP}
     restart: unless-stopped
     ports:
       - 80:80
