--- a/nginx/data/nginx.conf
+++ b/nginx/data/nginx.conf
@@ -26,4 +26,10 @@ http {
 	gzip on;
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
+
+	map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
 }
