trying change the configuration to show static images still not working

--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -17,9 +17,6 @@ RUN \
 	pip3 install -r requirements.txt --no-cache-dir --break-system-packages && \
 	apk --purge del .build-deps
 
-RUN mkdir /staticfiles
-COPY ./files/default_avatar.png /staticfiles
-
 RUN mkdir /app
 WORKDIR /app
 #COPY ./app/requirements.txt /app
@@ -29,12 +26,14 @@ WORKDIR /app
 
 EXPOSE 8000
 
-# COPY ./entrypoint.sh /tmp/entrypoint.sh
-# RUN chmod +x /tmp/entrypoint.sh
-# ENTRYPOINT [ "sh" , "/tmp/entrypoint.sh"]
+COPY ./entrypoint.sh /tmp/entrypoint.sh
+RUN chmod +x /tmp/entrypoint.sh
 USER $USER
+ENTRYPOINT [ "sh" , "/tmp/entrypoint.sh"]
 
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+# CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+
+
 #CMD ["python", "-m", "uvicorn", "--reload", "--host", "0.0.0.0", "app.asgi:application"]
 
 
