tournament checker only spawned in main thread

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ frontend/node_modules
 frontend/node_modules/*
 
 frontend/dist/bundle.js
+frontend/dist/src_views_friendProfile_js.bundle.js
 frontend/package-lock.js
 frontend/node_modules/.package-lock.json
