--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ frontend/dist/bundle.js
 frontend/dist/src_views_friendProfile_js.bundle.js
 frontend/package-lock.js
 frontend/node_modules/.package-lock.json
+
+*.zip
