--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,6 +1,7 @@
 Django == 5.0
 psycopg[binary,pool] == 3.1.19
-djangorestframework == 3.15.1
+djangorestframework == 3.14
+drf-yasg == 1.21.7
 tzdata == 2024.1
 #daphne == 4.0.0
 #django-allauth == 0.63.3
