fixed tournament bot matchmaking

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,6 +2,6 @@ API_URL=/backend
 
 CLIENT_ID=xxx
 CLIENT_SECRET=xxx
-REDIRECT_URI=https://pong.ch/oauthcallback
+REDIRECT_URI=https://localhost/oauthcallback
 AUTHORIZATION_URL=https://api.intra.42.fr/oauth/authorize
 TOKEN_URL=/api/oauth/token
