--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,5 @@ CLIENT_SECRET=xxx
 REDIRECT_URI=https://localhost/oauthcallback
 AUTHORIZATION_URL=https://api.intra.42.fr/oauth/authorize
 TOKEN_URL=/api/oauth/token
+
+BACKEND_IP=172.20.10.4
