replaced prints with debug logs

--- a/.env-example
+++ b/.env-example
@@ -14,6 +14,7 @@ BACKEND_IP=172.20.10.4
 JWT_SECRET=lolsecret
 DJANGO_DEBUG=true
 TOKEN_EXPIRATION_MINUTES=60
+LOGGING_DEBUG=true
 
 # OAUTH
 CLIENT_ID=XXX
